--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           command: |
             . venv/bin/activate
             ls
-            python hello.py
+            python ./hello.py
             docker build -t hellodocker:latest -f HelloDocker/Dockerfile .
             docker run hellodocker:latest
       #- store_artifacts:
