--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - checkout
-
+      - setup_remote_docker
       # Download and cache dependencies
       #- restore_cache:
       #    keys:
@@ -46,8 +46,7 @@ jobs:
           name: run hello
           command: |
             . venv/bin/activate
-            ls
-            python ./hello.py
+            python hello.py
             docker build -t hellodocker:latest -f HelloDocker/Dockerfile .
             docker run hellodocker:latest
       #- store_artifacts:
