--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@
 version: 2
 jobs:
   build:
-    docker:
+    machine:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/openjdk:8
+      - image: circleci/classic:201708-01
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
