--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     machine:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/classic:201708-01
+      image: circleci/classic:201708-01
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
