--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,7 @@ jobs:
       #- run:
       #    name: install dependencies
       #    command: |
-      #      wget -N -c https://github.com/broadinstitute/cromwell/releases/download/34/cromwell-34.jar
-
+      #      alias python="python3.4"
       #- save_cache:
       #    paths:
       #      - ./venv
@@ -45,7 +44,7 @@ jobs:
           name: run echo
           command: |
             python --version
-            python3 --version
+            python3.4 --version
       #- store_artifacts:
       #    path: test-reports
       #    destination: test-reports
